--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -55,6 +55,8 @@ material = "1.11.0"
 material3Android = "1.2.0"
 multidex = "2.0.1"
 
+google-login = "1.1.0"
+
 [libraries]
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "androidGradlePlugin" }
 android-desugarJdkLibs = { group = "com.android.tools", name = "desugar_jdk_libs", version.ref = "androidDesugarJdkLibs" }
@@ -131,6 +133,8 @@ oss-licenses = { group = "com.google.android.gms", name = "play-services-oss-lic
 mockk = { group = "io.mockk", name = "mockk", version.ref = "mockk" }
 
 multidex = { group = "androidx.multidex", name = "multidex", version.ref = "multidex" }
+
+google-login = { group = "com.google.android.libraries.identity.googleid", name = "googleid", version.ref = "google-login"}
 
 # verify
 verify-detektFormatting = { module = "io.gitlab.arturbosch.detekt:detekt-formatting", version.ref = "detekt" }
