--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -18,7 +18,7 @@ jobs:
         path: |
           ~/.gradle/caches
           ~/.gradle/wrapper
-        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties', '**/buildSrc/**/*.kt') }}
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
         restore-keys: |
           ${{ runner.os }}-gradle-  
 
@@ -33,7 +33,7 @@ jobs:
       run: chmod +x gradlew
 
     - name: Run test
-      run: ./gradlew test
+      run: ./gradlew test --parallel
 
     - name: Run ktlint
       run: ./gradlew ktlintCheck
