--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,7 +13,8 @@ jobs:
 
       # Gradle 캐싱: 빌드 시간과 네트워크 통신을 줄이기 위해 의존성 패키지들을 캐싱하여 재사용
     - name: Cache Gradle packages
-      uses: actions/cache@v3
+      uses: actions/cache/save@v3
+      if: always()
       with:
         path: |
           ~/.gradle/caches
