--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -11,17 +11,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-      # Gradle 캐싱: 빌드 시간과 네트워크 통신을 줄이기 위해 의존성 패키지들을 캐싱하여 재사용
-    - name: Cache Gradle packages
-      uses: actions/cache/save@v3
-      if: always()
+    - uses: actions/cache/restore@v3
+      id: restore-cache
       with:
-        path: |
-          ~/.gradle/caches
-          ~/.gradle/wrapper
         key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-        restore-keys: |
-          ${{ runner.os }}-gradle-  
 
     - name: set up JDK 17
       uses: actions/setup-java@v3
@@ -45,4 +38,14 @@ jobs:
 
     - name: Run ktlint
       run: ./gradlew ktlintCheck
+        
+        # Gradle 캐싱: 빌드 시간과 네트워크 통신을 줄이기 위해 의존성 패키지들을 캐싱하여 재사용
+             - name: Cache Gradle packages
+             uses: actions/cache/save@v3
+             id: cache
+             with:
+               path: |
+                 ~/.gradle/caches
+                 ~/.gradle/wrapper
+               key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
       
