Refactor/#12 빌드속도 개선 (#33)
* Update android.yml

* fix: gradle caching 순서 변경

* fix: gradle build 제거

* feat: test를 모듈별로 병렬 수행하도록 변경

* feat: save cache로 변경

* fix: save cache 오류 수정

* feat: 빌드 캐시 workflow 추가

--- a/.github/workflows/build_cache.yml
+++ b/.github/workflows/build_cache.yml
@@ -1,13 +1,13 @@
 name: Android CI
 
 on:
-  pull_request:
-    branches: [ "main", "develop" ]
+  push:
+    branches: ["develop"]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
       - uses: actions/checkout@v3
 
@@ -38,8 +38,6 @@ jobs:
         run: |
           echo "GOOGLE_CLIENT_ID=\"$GOOGLE_CLIENT_ID\"" >> local.properties
 
-      - name: Run test
-        run: ./gradlew test --parallel
+      - name: Build with Gradle
+        run: ./gradlew build
 
-      - name: Run ktlint
-        run: ./gradlew ktlintCheck
