feat: 병렬실행으로 변경

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -39,7 +39,7 @@ jobs:
           echo "GOOGLE_CLIENT_ID=\"$GOOGLE_CLIENT_ID\"" >> local.properties
 
       - name: Build with Gradle
-        run: ./gradlew build
+        run: ./gradlew build --parallel
 
       - name: Run test
         run: ./gradlew test --parallel
