feat: add build commend (#36)
* feat: add build commend

* feat: 병렬실행으로 변경

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -38,6 +38,9 @@ jobs:
         run: |
           echo "GOOGLE_CLIENT_ID=\"$GOOGLE_CLIENT_ID\"" >> local.properties
 
+      - name: Build with Gradle
+        run: ./gradlew build --parallel
+
       - name: Run test
         run: ./gradlew test --parallel
 
