--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustResize"
+            android:configChanges="orientation|screenSize|screenLayout"
             android:theme="@style/Theme.Withpeace.Starting">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
