feat : Dependency Graph 모듈 볼수 있는 플러그인 추가

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -62,6 +62,8 @@ credential = "1.2.0"
 paging = "3.2.1"
 pagingCompose = "3.2.1"
 
+dependencyGraph = "0.8.0"
+
 [libraries]
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "androidGradlePlugin" }
 android-desugarJdkLibs = { group = "com.android.tools", name = "desugar_jdk_libs", version.ref = "androidDesugarJdkLibs" }
@@ -165,6 +167,7 @@ androidx-material3-android = { group = "androidx.compose.material3", name = "mat
 [bundles]
 
 [plugins]
+dependency-graph = { id = "com.vanniktech.dependency.graph.generator", version.ref = "dependencyGraph" }
 android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
 android-library = { id = "com.android.library", version.ref = "androidGradlePlugin" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
