--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -38,8 +38,9 @@ jobs:
         run: |
           echo "GOOGLE_CLIENT_ID=\"$GOOGLE_CLIENT_ID\"" >> local.properties
 
-      - name: Build with Gradle
-        run: ./gradlew build --parallel
+      - name: Create google-services
+        run: |
+          echo '${{ secrets.GOOGLE_SERVICES_JSON }}' > ./app/google-services.json
 
       - name: Run test
         run: ./gradlew test --parallel
