--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -38,6 +38,12 @@ jobs:
         run: |
           echo "GOOGLE_CLIENT_ID=\"$GOOGLE_CLIENT_ID\"" >> local.properties
 
+      - name: Access YOUTH POLICY API KEY
+        env:
+          GOOGLE_CLIENT_ID: ${{ secrets.YOUTH_POLICY_API_KEY }}
+        run: |
+          echo "YOUTH_POLICY_API_KEY=\"YOUTH_POLICY_API_KEY\"" >> local.properties
+
       - name: Create google-services
         run: |
           echo '${{ secrets.GOOGLE_SERVICES_JSON }}' > ./app/google-services.json
