--- a/.github/workflows/build_cache.yml
+++ b/.github/workflows/build_cache.yml
@@ -50,9 +50,13 @@ jobs:
         run: |
           echo "BASE_URL=\"BASE_URL\"" >> local.properties 
 
-      - name: Create google-services
+      - name: Create google-services in app
         run: |
           echo '${{ secrets.GOOGLE_SERVICES_JSON }}' > ./app/google-services.json
+
+      - name: Create google-services in analytics
+        run: |
+          echo '${{ secrets.GOOGLE_SERVICES_JSON }}' > ./core/analytics/google-services.json
 
       - name: Build with Gradle
         run: ./gradlew build
