--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -53,9 +53,9 @@ ossLicensesPlugin = "0.10.6"
 androidxGlance = "1.0.0-beta01"
 glanceExperimentalTools = "0.2.2"
 junit = "1.1.5"
-material = "1.11.0"
-material3Android = "1.2.0"
-material3 = "1.2.1"
+material = "1.12.0"
+material3Android = "1.3.0-beta03"
+material3 = "1.3.0-beta03"
 multidex = "2.0.1"
 
 google-login = "1.1.0"
