--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,17 +1,16 @@
 [versions]
 androidGradlePlugin = "8.2.2"
-androidDesugarJdkLibs = "1.2.2"
 androidxCore = "1.12.0"
 androidxAppCompat = "1.6.1"
 androidxLifecycle = "2.7.0"
-androidxComposeBom = "2023.10.01"
+androidxComposeBom = "2024.06.00"
 androidxComposeCompiler = "1.5.1"
-androidxComposeNavigation = "2.7.6"
+androidxComposeNavigation = "2.7.7"
 composeIconExtended = "1.5.4"
 androidxActivity = "1.8.2"
 coreSplashscreen = "1.0.1"
-hilt = "2.48"
-hiltNavigationCompose = "1.1.0"
+hilt = "2.51.1"
+hiltNavigationCompose = "1.2.0"
 androidxConstraintlayout = "1.0.1"
 
 lifecycleRuntimeKtx = "2.7.0"
@@ -54,15 +53,15 @@ androidxGlance = "1.0.0-beta01"
 glanceExperimentalTools = "0.2.2"
 junit = "1.1.5"
 material = "1.12.0"
-material3Android = "1.3.0-beta03"
-material3 = "1.3.0-beta03"
+material3Android = "1.3.0-beta04"
+material3 = "1.3.0-beta04"
 multidex = "2.0.1"
 
 google-login = "1.1.0"
 
 credential = "1.2.0"
 
-paging = "3.3.0-alpha02"
+paging = "3.3.0"
 coreTesting = "2.2.0"
 
 dependencyGraph = "0.8.0"
@@ -77,7 +76,6 @@ benchmarkMacroJunit4 = "1.2.0-beta01"
 
 [libraries]
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "androidGradlePlugin" }
-android-desugarJdkLibs = { group = "com.android.tools", name = "desugar_jdk_libs", version.ref = "androidDesugarJdkLibs" }
 kotlin-gradlePlugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 hilt-gradlePlugin = { module = "com.google.dagger:hilt-android-gradle-plugin", version.ref = "hilt" }
 
