chore: navigation 버전 업데이트

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,7 +5,7 @@ androidxAppCompat = "1.6.1"
 androidxLifecycle = "2.7.0"
 androidxComposeBom = "2024.06.00"
 androidxComposeCompiler = "1.5.1"
-androidxComposeNavigation = "2.7.7"
+androidxComposeNavigation = "2.8.0-beta05"
 composeIconExtended = "1.5.4"
 androidxActivity = "1.8.2"
 coreSplashscreen = "1.0.1"
